# trp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  notes  trp.cabal
paper/: Makefile  trp.tex
src/: TRP.hs
