name:                trp
version:             0.1.0.0
synopsis:            Transactional Reactive Programming
description:         A library for Transactional Reactive Programming
homepage:            https://github.com/bhurt/trp
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2022 Brian Hurt
category:            TRP
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

Flag Devel
    Description:       Development build (enable warnings and less optimization)
    Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     TRP
  build-depends:       base >= 4.7 && < 5
                        , contravariant
                        , selective
                        , stm
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -O0
                       -W
                       -Weverything
                       -Wno-implicit-prelude
                       -Wno-missing-deriving-strategies
                       -Wno-missing-export-lists
                       -Wno-missing-import-lists
                       -Wno-missing-safe-haskell-mode
                       -Wno-prepositive-qualified-module
                       -Wno-safe
                       -Wno-unsafe
                       -Werror 
  else
    ghc-options:       -O2

source-repository head
  type:     git
  location: https://github.com/bhurt/trp
